--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1e272e" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Different Types of Tree Species with Their Names and Uses"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap"
+      rel="stylesheet"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
